implementing integration tests for all new methods in blog and author controllers
