# src/main/java/com/onboarding/firas/convertEntityModel/ConvertAuthor.java
@@ -5,10 +5,12 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 import com.onboarding.firas.accessingdatajpa.AuthorEntity;
 import com.onboarding.firas.authors.rest.AuthorController;
 import com.onboarding.firas.common.rest.controller.BaseController;
+import com.onboarding.firas.generated.AuthorsApi;
 import com.onboarding.firas.generated.model.Author;
 import com.onboarding.firas.generated.model.AuthorLinks;
 import com.onboarding.firas.generated.model.AuthorList;
 import com.onboarding.firas.generated.model.AuthorListLinks;
+import com.onboarding.firas.generated.model.AuthorPOST;
 import com.onboarding.firas.generated.model.HalLink;
 import java.util.List;
 import org.springframework.stereotype.Component;
@@ -20,10 +22,10 @@ public class ConvertAuthor {
     Author author = new Author().id(entityAuthor.getId()).
         firstname(entityAuthor.getFirstName()).
         lastname(entityAuthor.getLastName());
-    author.links(new AuthorLinks().self(AuthorController.getAuthorLinkStatic(entityAuthor.getId())));
+    author.links(new AuthorLinks().self(getAuthorLinkStatic(entityAuthor.getId())));
     return author;
   }
-  public AuthorEntity convertModelToEntity(Author modelAuthor){
+  public AuthorEntity convertModelToEntity(AuthorPOST modelAuthor){
     AuthorEntity author =
         new AuthorEntity(modelAuthor.getFirstname(), modelAuthor.getLastname());
     return author;
@@ -36,8 +38,11 @@ public class ConvertAuthor {
       list.addEmbeddedItem(this.convertEntityToModel( author));
     }
     list.links(new AuthorListLinks()
-        .self(BaseController.getHalGetLink(methodOn(new AuthorController().getClass()).getAuthors(null, null))));
+        .self(BaseController.getHalGetLink(methodOn(AuthorController.class).getAuthors(null, null))));
     return list;
+  }
+  private HalLink getAuthorLinkStatic(Long id) {
+    return AuthorController.getHalGetLink(methodOn(AuthorController.class).getAuthorById(id));
   }
 
 
